--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "WAVEFORM"
-uuid = "f112b1fd-c2e7-4920-9402-d478f720e9a5"
-authors = ["philipp "]
+uuid = "e6978400-dbaa-4a78-919b-5a4f1250a498"
+authors = ["pwitte "]
 version = "0.1.0"
 
 [deps]
